feat: update api, rename: api endpoint
