# server/docs/swagger.json
@@ -8,26 +8,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/common/healthcheck": {
-            "get": {
-                "description": "health check api server.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "common"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/v1/auth/signin": {
+        "/auth/signin": {
             "post": {
                 "description": "Sign in account for admin.",
                 "consumes": [
@@ -60,7 +41,7 @@
                 }
             }
         },
-        "/v1/auth/signup": {
+        "/auth/signup": {
             "post": {
                 "description": "Register account for admin.",
                 "consumes": [
@@ -93,7 +74,26 @@
                 }
             }
         },
-        "/v1/room": {
+        "/common/healthcheck": {
+            "get": {
+                "description": "health check api server.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "common"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/room": {
             "get": {
                 "description": "Get Room information from database",
                 "consumes": [
@@ -115,7 +115,7 @@
                 }
             }
         },
-        "/v1/room/activity": {
+        "/room/activity": {
             "get": {
                 "description": "Get User Activity for checkin.",
                 "consumes": [
@@ -184,7 +184,7 @@
                 }
             }
         },
-        "/v1/room/history": {
+        "/room/history": {
             "get": {
                 "description": "Get History.",
                 "consumes": [
@@ -215,7 +215,7 @@
                 }
             }
         },
-        "/v1/room/register": {
+        "/room/register": {
             "post": {
                 "description": "Register Room.",
                 "consumes": [
@@ -248,7 +248,7 @@
                 }
             }
         },
-        "/v1/user": {
+        "/user": {
             "get": {
                 "description": "Get information by student id",
                 "consumes": [
